<resources>
    <string name="app_name">SimpleNet</string>
    <string name="countries_and_areas">国家和地区</string>
    <string name="password">密码</string>
    <string name="search">搜索</string>

    <string name="settings">设置</string>
    <string name="moments">朋友圈</string>
    <string name="scan">扫一扫</string>
    <string name="shake2">摇一摇</string>
    <string name="people_nearby">附近的人</string>
    <string name="drift_bottle">漂流瓶</string>
    <string name="shopping">购物</string>
    <string name="games">游戏</string>

    <string name="chat">微信</string>
    <string name="no_msg">暂时没有新消息</string>
    <string name="wechat_id">微信号</string>
    <string name="my_posts">相册</string>
    <string name="collection">收藏</string>
    <string name="wallet">钱包</string>
    <string name="card_bag">卡包</string>
    <string name="expression2">表情</string>

    <string name="login_hint_account">请输入您的哔哩哔哩账号</string>
    <string name="login_hint_password">请输入您的密码</string>
    <string name="login">登录</string>
</resources>
