<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_pengyouquan"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/v2"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/moments"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />


            <TextView
                android:id="@+id/txt_saoyisao"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_de_saoyisao"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/scan"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/txt_yaoyiyao"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_de_yao"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/shake2"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/txt_nearby"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_de_nearby"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/people_nearby"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/txt_piaoliuping"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_de_ping"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/drift_bottle"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />


            <TextView
                android:id="@+id/txt_shop"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_de_shop"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/shopping"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/txt_game"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_de_game"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/games"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>