<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/login_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_general_margin"
        android:layout_marginStart="@dimen/default_general_margin"
        android:layout_marginTop="@dimen/default_grow_margin"
        android:background="@drawable/login_input_rounded_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_default_height"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/default_general_margin"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawablePadding="@dimen/default_general_margin"
                android:drawableStart="@drawable/ic_login_username_default"
                android:ellipsize="start"
                android:hint="@string/login_hint_account"
                android:inputType="textVisiblePassword"
                android:maxLines="1"
                android:textColor="@color/black_80"
                android:textColorHint="@color/gray_20"
                android:textSize="@dimen/default_medium_text_size" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/line_bg" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_default_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/default_small_padding"
            android:background="@android:color/transparent"
            android:drawablePadding="@dimen/default_general_margin"
            android:drawableStart="@drawable/ic_login_password_default"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black_80"
            android:textColorHint="@color/gray_20"
            android:textSize="@dimen/default_medium_text_size" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginBottom="@dimen/default_general_margin"
        android:layout_marginLeft="@dimen/default_general_margin"
        android:layout_marginRight="@dimen/default_general_margin"
        android:layout_marginTop="@dimen/default_long_margin"
        android:background="@drawable/corner_btn"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/default_medium_text_size" />


</LinearLayout>