<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <RelativeLayout
                android:id="@+id/view_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/setting_item_selector"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <ImageView
                    android:id="@+id/head"
                    android:layout_width="80.0dip"
                    android:layout_height="80.0dip"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/head" />

                <TextView
                    android:id="@+id/tvname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/head"
                    android:text="菲儿"
                    android:textSize="18.0dip" />

                <TextView
                    android:id="@+id/tvmsg"
                    style="@style/txt_ContextStyle1"
                    android:layout_below="@+id/tvname"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/head"
                    android:text="微信号：dada20150625"
                    android:textSize="14.0dip" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/right" />

                <ImageView
                    android:id="@+id/iv_sex"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="22dp"
                    android:layout_toRightOf="@+id/tvname"
                    android:src="@drawable/ic_sex_female" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />


            <TextView
                android:id="@+id/txt_album"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_me_photo"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/my_posts"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/txt_collect"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_me_collect"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/collection"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/txt_money"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_me_money"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/wallet"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/txt_card"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_me_card"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/card_bag"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />


            <TextView
                android:id="@+id/txt_smail"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_me_smail"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/expression2"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />

            <TextView
                android:id="@+id/txt_setting"
                style="@style/TxtTitle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/setting_item_selector"
                android:drawableLeft="@drawable/icon_me_setting"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/right"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="10dp"
                android:text="@string/settings"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:background="@color/black2" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>